# YoloV8-OpenCV-Pose-Video-Estimate

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md  vcpkg-cpu.json  vcpkg.json
src/: imgprocess.cpp  imgprocess.hpp  main.cpp  pose.hpp  posenet.cpp  posenet.hpp
